Mobile UI fixes
* z-index issues with dialogs are sorted now
* discussions action toolbar's pill buttons dotn shrink anymore in 320
wide screen
* fixed issue with discussion's dropdown menu being too wide
* changed selected folder icon color in mobile menu and aside navigation
* adjusted typography of discussions thread title and author
* adjusted padding for discussions thread title in mobile

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
@@ -220,7 +220,7 @@
 
 // Discussion 
 .application-list__header--discussion {
-  padding: 14px 10px 0;
+  padding: 14px 10px 10px;
   
   @include breakpoint($breakpoint-pad) {
     padding: 14px 0 0;
@@ -309,6 +309,10 @@
 .application-list__item--communicator-message {  
   border-bottom: 5px solid $color-message-border;
   padding: 10px 0;
+  
+  @include breakpoint($breakpoint-pad) {
+    padding: 15px 0;
+  }
   
   &:last-child {
     border: 0;
