--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/buttons.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/buttons.scss
@@ -555,6 +555,9 @@
 .button-pill--discussion-toolbar {
   background-color: $color-main-function-button-pill-edit-background;
   color: $color-main-function-button-pill-edit-text;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
   margin-right: 10px;
   vertical-align: top;
   
