--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/dialog.scss
@@ -15,7 +15,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 10;
+  z-index: 99999;
 }
 
 .dialog--visible {
