--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/item-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/item-list.scss
@@ -86,7 +86,8 @@
     background-color: $color-item-list-item-aside-background-active;
     color: $color-item-list-item-font-color-active;
   
-    .text {
+    .text,
+    .item-list__icon {
       color: $color-item-list-item-font-color-active;            
     }
   }
